2011-02-24  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (PyObject_from_attr_value): Support for
	IPP_TAG_RESOLUTION.

	* cupsmodule.c (initcups): IPP_RES_PER_CM and IPP_RES_PER_INCH.

2011-02-23  Tim Waugh  <twaugh@redhat.com>

	* setup.py: Version 1.9.54.

2011-02-23  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_begin_allow_threads): Avoid
	'unused variable' warning.

2011-02-23  Tim Waugh  <twaugh@redhat.com>

	* psdriver.attr, postscriptdriver.prov: RPM hooks for tagging
	packages with Device IDs of models supported by drivers.
	* Makefile: Install RPM hooks if rpm is available.

2011-02-03  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_deletePrinterFromClass): More
	defensive coding (bug #673468).

2010-12-15  Tim Waugh  <twaugh@redhat.com>

	* setup.py: Version 1.9.53.

2010-12-15  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.h: Declare new function get_TLS and its data
	structure.
	* cupsmodule.c: Implement it.
	* cupsmodule.c, cupsconnection.c: Use thread-local storage for
	CUPS password callback (bug #662805).

2010-11-01  Tim Waugh  <twaugh@redhat.com>

	* setup.py: Version 1.9.52.

2010-10-18  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection.getPPDs2): New method as
	getPPDs but with attribute values as lists.

2010-05-11  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c: New HTTP_NOT_MODIFIED int constant.
	* cupsconnection.c (Connection_getPPD3): New method.

2010-05-05  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPrinterAttributes): The
	member-names attribute is always a list.

2010-04-28  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_addPrinter): Clear
	printer-state-reasons if the PPD has been
	changed (bug #510926).

2010-04-26  Tim Waugh  <twaugh@redhat.com>

	* Makefile, setup.py: Define VERSION in setup.py (trac #14).

	* cupsipp.c: Added compatibility code to allow compilation
	with Python < 2.5 (trac #14).
