@@ -710,6 +710,10 @@ initcups (void)
   INT_CONSTANT (IPP_PRINTER_PROCESSING);
   INT_CONSTANT (IPP_PRINTER_STOPPED);
 
+  // IPP resolution units
+  INT_CONSTANT (IPP_RES_PER_CM);
+  INT_CONSTANT (IPP_RES_PER_INCH);
+
   // IPP finishings
   INT_CONSTANT (IPP_FINISHINGS_NONE);
   INT_CONSTANT (IPP_FINISHINGS_STAPLE);
@@ -739,6 +743,17 @@ initcups (void)
   INT_CONSTANT (IPP_FINISHINGS_BIND_TOP);
   INT_CONSTANT (IPP_FINISHINGS_BIND_RIGHT);
   INT_CONSTANT (IPP_FINISHINGS_BIND_BOTTOM);
+
+  // IPP orientations
+  INT_CONSTANT (IPP_PORTRAIT);
+  INT_CONSTANT (IPP_LANDSCAPE);
+  INT_CONSTANT (IPP_REVERSE_PORTRAIT);
+  INT_CONSTANT (IPP_REVERSE_LANDSCAPE);
+
+  // IPP qualities
+  INT_CONSTANT (IPP_QUALITY_DRAFT);
+  INT_CONSTANT (IPP_QUALITY_NORMAL);
+  INT_CONSTANT (IPP_QUALITY_HIGH);
 
   // IPP errors
   INT_CONSTANT (IPP_OK);
@@ -810,9 +825,6 @@ initcups (void)
   INT_CONSTANT (IPP_TAG_CHARSET);
   INT_CONSTANT (IPP_TAG_LANGUAGE);
   INT_CONSTANT (IPP_TAG_MIMETYPE);
-
-  INT_CONSTANT (IPP_RES_PER_CM);
-  INT_CONSTANT (IPP_RES_PER_INCH);
 
   // Limits
   INT_CONSTANT (IPP_MAX_NAME);
