@@ -1,5 +1,8 @@
 2011-02-24  Tim Waugh  <twaugh@redhat.com>
 
+	* cupsmodule.c (initcups): IPP orientation and quality
+	constants.
+
 	* cupsconnection.c (PyObject_from_attr_value): Support for
 	IPP_TAG_RESOLUTION.
 
